--- a/assets/Languages/en-US.cfg
+++ b/assets/Languages/en-US.cfg
@@ -53,6 +53,10 @@ route_corrupt_nostations = The selected route is corrupt: \r\n No stations defin
 route_corrupt_noobjects = The selected route is corrupt: \r\n No objects defined.
 plugin_failure1 = The train plugin [plugin] failed to load. 
 plugin_failure2 = The built-in ATS/ ATC systems will be used instead, which may cause issues.
+package_filename_empty = Attempted to create a package with an empty filename.
+package_directory_missing = The directory in which you attempted to save the package file does not exist: \r \n
+package_directory_nowrite = No write access available in the directory in which you attempted to save the package file: \r \n
+package_file_generic = Failed to create the following file: \r \n
 
 [start]
 title = Start new game
@@ -220,8 +224,8 @@ error_overwrite = Overwrite
 error_replace = Replace
 button_next = Next >
 button_back = < Back
-button_ok = OK
 button_cancel = Cancel
+button_ok = OK
 button_install = Install
 button_create = Create
 button_ignore = Ignore
@@ -606,9 +610,9 @@ SINGLE_NEUTRAL = Moves handle toward neutral by one notch for trains with one ha
 SINGLE_BRAKE = Moves handle toward brake by one notch for trains with one handle
 SINGLE_EMERGENCY = Activates emergency brake for trains with one handle
 SINGLE_FULLAXIS = Controls power and brake for trains with one handle on a full joystick axis
-POWER_ANY_NOTCH = Adjust to the power notch directly from command option value.
-BRAKE_ANY_NOTCH = Adjust to the brake notch directly from command option value.
-REVERSER_ANY_POSITION = Adjust to the reverser directly from command option value.
+POWER_ANY_NOTCH = Adjusts the power notch directly from a command option value.
+BRAKE_ANY_NOTCH = Adjusts the brake notch directly from a command option value.
+REVERSER_ANY_POSITION = Adjusts the reverser directly from a command option value.
 HOLD_BRAKE = Hold Brake
 REVERSER_FORWARD = Moves reverser forward by one notch
 REVERSER_BACKWARD = Moves reverser backward by one notch
@@ -636,6 +640,10 @@ SECURITY_I = The I function of the security system
 SECURITY_J = The J function of the security system
 SECURITY_K = The K function of the security system
 SECURITY_L = The L function of the security system
+SECURITY_M = N/A
+SECURITY_N = N/A
+SECURITY_O = N/A
+SECURITY_P = N/A
 CAMERA_INTERIOR = Switches to the train's interior view
 CAMERA_EXTERIOR = Switches to the train's exterior view
 CAMERA_TRACK = Switches to the track view
@@ -997,7 +1005,7 @@ extended_loco_brake_none = Not fitted
 extended_loco_brake_notched_air_brake = Notched air brake
 extended_loco_brake_cl = Air brake with partial release
 extended_loco_brake_combined = Combined
-extended_loco_brake_independant = Independant
+extended_loco_brake_independant = Independent
 extended_loco_brake_blocking = Blocking
 extended_delay_loco_brake_up = DelayLocoBrakeUp
 extended_delay_loco_brake_down = DelayLocoBrakeDown
@@ -1007,6 +1015,6 @@ extended_misc_eb = Handle behaviour on EB:
 extended_misc_eb_no = No Action
 extended_misc_eb_power = Return Power to neutral
 extended_misc_eb_reverser = Return Reverser to neutral
-extended_misc_eb_power_reverser = Return Power & Reverser to neutral
+extended_misc_eb_power_reverser = Return Power and Reverser to neutral
 
 extended_language = Language
