--- a/assets/Languages/hu-HU.cfg
+++ b/assets/Languages/hu-HU.cfg
@@ -53,6 +53,10 @@ route_corrupt_nostations = The selected route is corrupt: \r\n No stations defin
 route_corrupt_noobjects = The selected route is corrupt: \r\n No objects defined.
 plugin_failure1 = A [plugin] vonat plugin nem töltődött be. 
 plugin_failure2 = Helyette a beépített ATS/ATC rendszert használjuk, ami zavart okozhat.
+package_filename_empty = Attempted to create a package with an empty filename.
+package_directory_missing = The directory in which you attempted to save the package file does not exist: \r \n
+package_directory_nowrite = No write access available in the directory in which you attempted to save the package file: \r \n
+package_file_generic = Failed to create the following file: \r \n
 
 [start]
 title = Új játék indítása
@@ -220,8 +224,8 @@ error_overwrite = Felülír
 error_replace = Cserél
 button_next = Következő >
 button_back = < Előző
-button_ok = OK
 button_cancel = Mégsem
+button_ok = OK
 button_install = Telepítés
 button_create = Létrehozás
 button_ignore = Figyelmen kívül hagyás
@@ -240,6 +244,7 @@ list_type_analoghalf = Analóg (fél tengely)
 list_type_analogfull = Analóg (teljes tengely)
 list_description = Leírás
 list_assignment = Kezelőszerv
+list_option = Command Option
 add = Hozzáadás
 remove = Eltávolítás
 import = Importálás...
@@ -249,6 +254,7 @@ up = Mozgatás felfele
 down = Mozgatás lefele
 selection = Kiválasztott parancs
 selection_command = Parancs:
+selection_command_option = Command Option:
 selection_keyboard = Billentyűzet:
 selection_keyboard_assignment_grab = Kattintson ide a billentyűlenyomások érzékeléséhez a kívánt gomb automatikus kiválasztásához.
 selection_keyboard_assignment_grabbing = Nyomjon meg egy gombot...
@@ -397,6 +403,18 @@ hud_size_normal = Normál
 hud_size_large = Nagy
 transparencyfix = Átlátszósági hibák javítása régi pályákban/vonatokban
 hacks_enable = Régi hibás pályák/vonatok helyes megjelenítése
+input_device_plugin = Input Device Plugin
+input_device_plugin_warning = WARNING: If you enable Input Device Plugin(s), these may conflict with one or more controls.
+input_device_plugin_name = Name
+input_device_plugin_status = Status
+input_device_plugin_status_failure = Failure
+input_device_plugin_status_disable = Disable
+input_device_plugin_status_enable = Enable
+input_device_plugin_version = Version
+input_device_plugin_provider = Provider
+input_device_plugin_file_name = File Name
+input_device_plugin_switch = Enable this Input Device Plugin
+input_device_plugin_config = Config
 
 [dialog]
 csvfiles = CSV fájl
@@ -592,6 +610,10 @@ SINGLE_NEUTRAL = Kontroller üres állás felé (egykaros járműnél)
 SINGLE_BRAKE = Kontroller fékezőállásba (egykaros járműnél)
 SINGLE_EMERGENCY = Vészfék (egykaros járműnél)
 SINGLE_FULLAXIS = Szabályozza a menet- és fékfokozatokat a joystick egy teljes tengelyén egykaros járműveknél
+POWER_ANY_NOTCH = Adjusts the power notch directly from a command option value.
+BRAKE_ANY_NOTCH = Adjusts the brake notch directly from a command option value.
+REVERSER_ANY_POSITION = Adjusts the reverser directly from a command option value.
+HOLD_BRAKE = Hold Brake
 REVERSER_FORWARD = Irányváltó előre
 REVERSER_BACKWARD = Irányváltó hátra
 REVERSER_FULLAXIS = Irányváltó joysticken
@@ -618,6 +640,10 @@ SECURITY_I = A biztonsági rendszer I funkciója
 SECURITY_J = A biztonsági rendszer J funkciója
 SECURITY_K = A biztonsági rendszer K funkciója
 SECURITY_L = A biztonsági rendszer L funkciója
+SECURITY_M = N/A
+SECURITY_N = N/A
+SECURITY_O = N/A
+SECURITY_P = N/A
 CAMERA_INTERIOR = Belső kameranézetre vált
 CAMERA_EXTERIOR = Külső kameranézetre vált
 CAMERA_TRACK = Pálya kameranézetre vált
@@ -892,10 +918,14 @@ handle = Handle
 handle_type = HandleType:
 handle_power_notches = PowerNotches:
 handle_brake_notches = BrakeNotches:
+handle_driver_power_notches = DriverPowerNotches:
+handle_driver_brake_notches = DriverBrakeNotches:
 handle_power_notch_reduce_steps = PowerNotchReduceSteps:
 handle_separated = Separated
 handle_combined = Combined
 handle_brake_notches_error_message = BrakeNotches must be at least 1 if HoldBrake is set.
+handle_driver_power_notches_error_message = DriverPowerNotches must be less than or equal to PowerNotches.
+handle_driver_brake_notches_error_message = DriverBrakeNotches must be less than or equal to BrakeNotches.
 
 cab = Vezetőállás
 cab_driver_car = DriverCar:
