--- a/assets/Languages/es-ES.cfg
+++ b/assets/Languages/es-ES.cfg
@@ -53,6 +53,10 @@ route_corrupt_nostations = La ruta seleccionada es corrupta: \r\n No se ha defin
 route_corrupt_noobjects = The selected route is corrupt: \r\n No objects defined.
 plugin_failure1 = No se ha podido cargar la extensión del tren [plugin]. 
 plugin_failure2 = Se utilizarán los sistemas ATS/ATC por defecto, que podrían ser incompatibles.
+package_filename_empty = Attempted to create a package with an empty filename.
+package_directory_missing = The directory in which you attempted to save the package file does not exist: \r \n
+package_directory_nowrite = No write access available in the directory in which you attempted to save the package file: \r \n
+package_file_generic = Failed to create the following file: \r \n
 
 [start]
 title = Nueva partida
@@ -220,8 +224,8 @@ error_overwrite = Sobreescribir
 error_replace = Reemplazar
 button_next = Siguiente >
 button_back = < Atrás
-button_ok = OK
 button_cancel = Cancelar
+button_ok = OK
 button_install = Instalar
 button_create = Crear
 button_ignore = Ignorar
@@ -240,6 +244,7 @@ list_type_analoghalf = Analógico (medio eje)
 list_type_analogfull = Analógico (eje completo)
 list_description = Descripción
 list_assignment = Asignación
+list_option = Command Option
 add = Añadir
 remove = Eliminar
 import = Importar...
@@ -249,6 +254,7 @@ up = Mover arriba
 down = Mover abajo
 selection = Comando seleccionado
 selection_command = Commando:
+selection_command_option = Command Option:
 selection_keyboard = Teclado:
 selection_keyboard_assignment_grab = Presione aquí para seleccionar una tecla del teclado.
 selection_keyboard_assignment_grabbing = Pulse cualquier tecla...
@@ -397,6 +403,18 @@ hud_size_normal = Normal
 hud_size_large = Large
 transparencyfix = Attempt to fix transparency issues in older content.
 hacks_enable = Enable hacks for buggy older content.
+input_device_plugin = Input Device Plugin
+input_device_plugin_warning = WARNING: If you enable Input Device Plugin(s), these may conflict with one or more controls.
+input_device_plugin_name = Name
+input_device_plugin_status = Status
+input_device_plugin_status_failure = Failure
+input_device_plugin_status_disable = Disable
+input_device_plugin_status_enable = Enable
+input_device_plugin_version = Version
+input_device_plugin_provider = Provider
+input_device_plugin_file_name = File Name
+input_device_plugin_switch = Enable this Input Device Plugin
+input_device_plugin_config = Config
 
 [dialog]
 csvfiles = Archivos CSV
@@ -592,6 +610,10 @@ SINGLE_NEUTRAL = Mueve el regulador a netro en trenes con mando simple
 SINGLE_BRAKE = Aplica el freno un punto en trenes con mando simple
 SINGLE_EMERGENCY = Activa el freno de emergencia en trenes con mando simple
 SINGLE_FULLAXIS = Controla el regulador y el freno en trenes con mando simple con eje completo
+POWER_ANY_NOTCH = Adjusts the power notch directly from a command option value.
+BRAKE_ANY_NOTCH = Adjusts the brake notch directly from a command option value.
+REVERSER_ANY_POSITION = Adjusts the reverser directly from a command option value.
+HOLD_BRAKE = Hold Brake
 REVERSER_FORWARD = Mueve el inversor hacia delante una posición
 REVERSER_BACKWARD = Mueve el inversor hacia atrás una posición
 REVERSER_FULLAXIS = Controla el inversor en un joystick de eje completo
@@ -618,6 +640,10 @@ SECURITY_I = La funcion <I> del sistema de seguridad
 SECURITY_J = La funcion <J> del sistema de seguridad
 SECURITY_K = La funcion <K> del sistema de seguridad
 SECURITY_L = La funcion <L> del sistema de seguridad
+SECURITY_M = N/A
+SECURITY_N = N/A
+SECURITY_O = N/A
+SECURITY_P = N/A
 CAMERA_INTERIOR = Muestra la cámara interior (cabina)
 CAMERA_EXTERIOR = Muestra la cámara exterior
 CAMERA_TRACK = Muestra la cámara de vía
@@ -829,3 +855,166 @@ w = W
 x = X
 y = Y
 z = Z
+
+[editor]
+new = New
+open = Open...
+save = Save
+save_as = Save as...
+close = Close
+new_message = Do you want to save data before creating a new train?
+open_message = Do you want to save data before opening another train?
+close_message = Do you want to save data before closing?
+
+properties_one = Properties (1)
+properties_two = Properties (2)
+acceleration = Acceleration
+motor_sound = Motor Sound
+extended_features = Extended Features
+
+performance = Performance
+performance_deceleration = Deceleration:
+performance_static_friction = CoefficientOfStaticFriction:
+performance_rolling_resistance = CoefficientOfRollingResistance:
+performance_aerodynamic_drag = AerodynamicDragCoefficient:
+
+delay = Delay
+delay_power_up = DelayPowerUp
+delay_power_down = DelayPowerDown
+delay_brake_up = DelayBrakeUp
+delay_brake_down = DelayBrakeDown
+delay_set = Set
+delay_notch = Notch
+delay_save = Save
+delay_cancel = Cancel
+
+move = Move
+move_jerk_power_up = JerkPowerUp:
+move_jerk_power_down = JerkPowerDown:
+move_jerk_brake_up = JerkBrakeUp:
+move_jerk_brake_down = JerkBrakeDown:
+move_brake_cylinder_up = BrakeCylinderUp:
+move_brake_cylinder_down = BrakeCylinderDown:
+
+brake = Brake
+brake_type = BrakeType:
+brake_control_system = BrakeControlSystem:
+brake_control_speed = BrakeControlSpeed:
+brake_smee = Electromagnetic straight air brake
+brake_ecb = Electro-pneumatic air brake without brake pipe
+brake_cl = Air brake with partial release feature
+brake_control_system_none = None
+brake_lock_out_valve = Closing electromagnetic valve
+brake_delay_including_control = Delay-including control
+
+pressure = Pressure
+pressure_brake_cylinder_service_max = BrakeCylinderServiceMaximumPressure:
+pressure_brake_cylinder_emergency_max = BrakeCylinderEmergencyMaximumPressure:
+pressure_main_reservoir_min = MainReservoirMinimumPressure:
+pressure_main_reservoir_max = MainReservoirMaximumPressure:
+pressure_brake_pipe_normal = BrakePipeNormalPressure:
+
+handle = Handle
+handle_type = HandleType:
+handle_power_notches = PowerNotches:
+handle_brake_notches = BrakeNotches:
+handle_driver_power_notches = DriverPowerNotches:
+handle_driver_brake_notches = DriverBrakeNotches:
+handle_power_notch_reduce_steps = PowerNotchReduceSteps:
+handle_separated = Separated
+handle_combined = Combined
+handle_brake_notches_error_message = BrakeNotches must be at least 1 if HoldBrake is set.
+handle_driver_power_notches_error_message = DriverPowerNotches must be less than or equal to PowerNotches.
+handle_driver_brake_notches_error_message = DriverBrakeNotches must be less than or equal to BrakeNotches.
+
+cab = Cab
+cab_driver_car = DriverCar:
+cab_driver_car_error_message = DriverCar must be less than NumberOfMotorCars + NumberOfTrailerCars.
+
+car = Car
+car_motor_car_mass = MotorCarMass:
+car_number_of_motor_cars = NumberOfMotorCars:
+car_trailer_car_mass = TrailerCarMass:
+car_number_of_trailer_cars = NumberOfTrailerCars:
+car_length_of_a_car = LengthOfACar:
+car_front_car_is_motor_car = FrontCarIsMotorCar:
+car_width_of_a_car = WidthOfACar:
+car_height_of_a_car = HeightOfACar:
+car_center_of_gravity_height = CenterOfGravityHeight:
+car_exposed_frontal_area = ExposedFrontalArea:
+car_unexposed_frontal_area = UnexposedFrontalArea:
+car_number_of_trailer_cars_error_message = NumberOfTrailerCars must be at least 1 if FrontCarIsAMotorCar is not set.
+
+device = Device
+device_const_speed = ConstSpeed:
+device_hold_brake = HoldBrake:
+device_readhesion_device = ReAdhesionDevice:
+device_pass_alarm = PassAlarm:
+device_door_open_mode = DoorOpenMode:
+device_door_close_mode = DoorCloseMode:
+device_door_width = DoorWidth:
+device_door_max_tolerance = DoorMaxTolerance:
+device_none = None
+device_manual_switching = Manual switching
+device_automatic_switching = Automatic switching
+device_type_a = Type A (instant)
+device_type_b = Type B (slow)
+device_type_c = Type C (medium)
+device_type_d = Type D (fast)
+device_single = Single
+device_looping = Looping
+device_semi_automatic = Semi-automatic
+device_automatic = Automatic
+device_manual = Manual
+
+acceleration_notch = Notch:
+acceleration_data = Data
+acceleration_preview = Preview
+acceleration_subtract_deceleration = Subtract deceleration due to air and rolling resistance
+acceleration_max_x = Xmax:
+acceleration_max_y = Ymax:
+
+motor_edit = Edit mode
+motor_sound_index = SoundIndex:
+motor_pitch = Pitch
+motor_volume = Volume
+motor_sound_none = None
+
+motor_preview = Preview
+motor_y_pitch = Ypitch
+motor_y_volume = Yvolume
+motor_min_x = Xmin:
+motor_max_x = Xmax:
+motor_left = Left
+motor_right = Right
+motor_in = In
+motor_out = Out
+motor_max_y_pitch = YmaxPitch:
+motor_max_y_volume = YmaxVolume:
+
+extended_note = Please note: Features found on this page may require the following minimum version of openBVE:
+
+extended_loco_brake = Locomotive Brake
+extended_loco_brake_system_type = BrakeType:
+extended_loco_brake_notches = Notches:
+extended_loco_brake_delay_up = DelayUp:
+extended_loco_brake_delay_down = DelayDown:
+extended_loco_brake_type = Type:
+extended_loco_brake_set = Set
+extended_loco_brake_none = Not fitted
+extended_loco_brake_notched_air_brake = Notched air brake
+extended_loco_brake_cl = Air brake with partial release
+extended_loco_brake_combined = Combined
+extended_loco_brake_independant = Independent
+extended_loco_brake_blocking = Blocking
+extended_delay_loco_brake_up = DelayLocoBrakeUp
+extended_delay_loco_brake_down = DelayLocoBrakeDown
+
+extended_misc = Miscellaneous Features
+extended_misc_eb = Handle behaviour on EB:
+extended_misc_eb_no = No Action
+extended_misc_eb_power = Return Power to neutral
+extended_misc_eb_reverser = Return Reverser to neutral
+extended_misc_eb_power_reverser = Return Power and Reverser to neutral
+
+extended_language = Language
