--- a/source/ObjectViewer/ObjectViewer.csproj
+++ b/source/ObjectViewer/ObjectViewer.csproj
@@ -80,12 +80,12 @@
     <Compile Include="FunctionScripts.cs" />
     <Compile Include="Hosts.cs" />
     <Compile Include="Options.cs" />
-    <Compile Include="Parsers\AssimpXParser.cs" />
+    <Compile Include="Parsers\Generic\AssimpXParser.cs" />
     <Compile Include="Parsers\Ls3DGrpParser.cs" />
     <Compile Include="Parsers\Ls3DObjectParser.cs" />
     <Compile Include="Parsers\MeshBuilder.cs" />
     <Compile Include="Parsers\MSTS\ShapeParser.cs" />
-    <Compile Include="Parsers\NewXParser.cs" />
+    <Compile Include="Parsers\Generic\NewXParser.cs" />
     <Compile Include="Parsers\WavefrontObjParser.cs" />
     <Compile Include="Plugins.cs" />
     <Compile Include="Renderer.Strings.cs" />
@@ -93,7 +93,7 @@
     <Compile Include="ObjectManager.cs" />
     <Compile Include="Parsers\AnimatedObjectParser.cs" />
     <Compile Include="Parsers\CsvB3dObjectParser.cs" />
-    <Compile Include="Parsers\XObjectParser.cs" />
+    <Compile Include="Parsers\Generic\XObjectParser.cs" />
     <Compile Include="Fonts.cs" />
     <Compile Include="formMessages.cs">
       <SubType>Form</SubType>
