Add missing localization strings

--- a/assets/Languages/ca-ES.cfg
+++ b/assets/Languages/ca-ES.cfg
@@ -602,6 +602,8 @@ POWER_HALFAXIS = Controla el regulador en trens amb comandament doble amb la mei
 POWER_FULLAXIS = Controla el regulador en trens amb comandament doble amb l'eix complet d'una palanca de control
 BRAKE_DECREASE = Disminueix el fre una posició en trens amb comandament doble
 BRAKE_INCREASE = Incrementa el fre una posició en trens amb comandament doble
+LOCOBRAKE_DECREASE = N/A
+LOCOBRAKE_INCREASE = N/A
 BRAKE_HALFAXIS = Controla el fre en trens amb comandament doble amb la meitat de l'eix d'una palanca de control
 BRAKE_FULLAXIS = Controla el fre en trens amb comandament doble amb l'eix complet d'una palanca de control
 BRAKE_EMERGENCY = Activa el fre d'emergència en trens amb comandament doble
