--- a/assets/Languages/cs-CZ.cfg
+++ b/assets/Languages/cs-CZ.cfg
@@ -602,6 +602,8 @@ POWER_HALFAXIS = Ovládácí prvky výkonu u vlaku s odděleným ovládáním ko
 POWER_FULLAXIS = Ovládácí prvky výkonu u vlaku s odděleným ovládáním kontroleru a brzdy (joystick-všechny osy)
 BRAKE_DECREASE = Snížení brzdného účinku o jeden stupeň u vlaku s oddělenými kontroléry
 BRAKE_INCREASE = Zvýšení brzdného účinku o jeden stupeň u vlaku s oddělenými kontroléry
+LOCOBRAKE_DECREASE = N/A
+LOCOBRAKE_INCREASE = N/A
 BRAKE_HALFAXIS = Ovládácí prvky brzdy u vlaku s odděleným ovládáním kontroleru a brzdy (joystick-polovina os)
 BRAKE_FULLAXIS = Ovládácí prvky brzdy u vlaku s odděleným ovládáním kontroleru a brzdy (joystick-všechny osy)
 BRAKE_EMERGENCY = Aktivace rychlobrzdy u vlaku s odděleným ovládáním kontroleru a brzdy
