--- a/assets/Languages/en-US.cfg
+++ b/assets/Languages/en-US.cfg
@@ -602,6 +602,8 @@ POWER_HALFAXIS = Controls power for trains with two handles on half of a joystic
 POWER_FULLAXIS = Controls power for trains with two handles on a full joystick axis
 BRAKE_DECREASE = Decreases brake by one notch for trains with two handles
 BRAKE_INCREASE = Increases brake by one notch for trains with two handles
+LOCOBRAKE_DECREASE = N/A
+LOCOBRAKE_INCREASE = N/A
 BRAKE_HALFAXIS = Controls brake for trains with two handles on half of a joystick axis
 BRAKE_FULLAXIS = Controls brake for trains with two handles on a full joystick axis
 BRAKE_EMERGENCY = Activates emergency brakes for trains with two handles
