--- a/assets/Languages/es-ES.cfg
+++ b/assets/Languages/es-ES.cfg
@@ -602,6 +602,8 @@ POWER_HALFAXIS = Controla el regulador en trenes con mando doble con medio eje
 POWER_FULLAXIS = Controla el regulador en trenes con mando doble con eje completo
 BRAKE_DECREASE = Libera el freno en un punto en trenes con mando doble
 BRAKE_INCREASE = Incrementa el freno en un punto en trenes con mando doble
+LOCOBRAKE_DECREASE = N/A
+LOCOBRAKE_INCREASE = N/A
 BRAKE_HALFAXIS = Controla el freno en trenes con mando doble con medio eje
 BRAKE_FULLAXIS = Controla el freno en trenes con mando doble con eje completo
 BRAKE_EMERGENCY = Activa el freno de emergencia en trenes con mando doble
