--- a/assets/Languages/fi-FI.cfg
+++ b/assets/Languages/fi-FI.cfg
@@ -602,6 +602,8 @@ POWER_HALFAXIS = Kaksikahvaisten junien tehonsäätö, puoliakseli
 POWER_FULLAXIS = Kaksikahvaisten junien tehonsäätö, täysakseli
 BRAKE_DECREASE = Kaksikahvaisten junien yhden asteen jarruvoiman vähennys
 BRAKE_INCREASE = Kaksikahvaisten junien yhden asteen jarruvoiman lisäys
+LOCOBRAKE_DECREASE = N/A
+LOCOBRAKE_INCREASE = N/A
 BRAKE_HALFAXIS = Kaksikahvaisten junien jarrusäätö, puoliakseli
 BRAKE_FULLAXIS = Kaksikahvaisten junien jarrusäätö, kokoakseli
 BRAKE_EMERGENCY = Aktivoi kaksikahvaisen junan hätäjarrutuksen
