--- a/assets/Languages/fr-FR.cfg
+++ b/assets/Languages/fr-FR.cfg
@@ -602,6 +602,8 @@ POWER_HALFAXIS = Contrôle la traction sur les trains se conduisant avec deux ma
 POWER_FULLAXIS = Contrôle la traction sur les trains se conduisant avec deux manettes à l'aide un axe complet du joystick
 BRAKE_DECREASE = Augmente le freinage d'un cran sur les trains se conduisant avec deux manettes
 BRAKE_INCREASE = Diminue le freinage d'un cran sur les trains se conduisant avec deux manettes
+LOCOBRAKE_DECREASE = N/A
+LOCOBRAKE_INCREASE = N/A
 BRAKE_HALFAXIS = Contrôle le freinage sur les trains se conduisant avec deux manettes à l'aide un demi-axe du joystick
 BRAKE_FULLAXIS = Contrôle le freinage sur les trains se conduisant avec deux manettes à l'aide un axe complet du joystick
 BRAKE_EMERGENCY = Active le freinage d'urgence sur les trains se conduisant avec deux manettes
