--- a/assets/Languages/hu-HU.cfg
+++ b/assets/Languages/hu-HU.cfg
@@ -602,6 +602,8 @@ POWER_HALFAXIS = Szabályozza a menetfokozatokat kétkaros járműveknél a joys
 POWER_FULLAXIS = Szabályozza a menetfokozatokat kétkaros járműveknél a joystick teljes tengelyén
 BRAKE_DECREASE = Egy fékfokozat vissza (kétkaros járműnél)
 BRAKE_INCREASE = Egy fékfokozat előre (kétkaros járműnél)
+LOCOBRAKE_DECREASE = N/A
+LOCOBRAKE_INCREASE = N/A
 BRAKE_HALFAXIS = Szabályozza a fékfokozatokat kétkaros járműveknél a joystick fél tengelyén
 BRAKE_FULLAXIS = Szabályozza a fékfokozatokat kétkaros járműveknél a joystick teljes tengelyén
 BRAKE_EMERGENCY = Vészfék (kétkaros járműnél)
