--- a/assets/Languages/it-IT.cfg
+++ b/assets/Languages/it-IT.cfg
@@ -602,6 +602,8 @@ POWER_HALFAXIS = Controllo potenza per treni con due comandi usando il joistick 
 POWER_FULLAXIS = Controllo potenza per treni con due comandi usando il joistick ad asse completo
 BRAKE_DECREASE = Diminuisce la frenatura di una tacca per treni con due comandi
 BRAKE_INCREASE = Aumenta la frenatura di una tacca per treni con due comandi
+LOCOBRAKE_DECREASE = N/A
+LOCOBRAKE_INCREASE = N/A
 BRAKE_HALFAXIS = Controllo frenatura per treni con due comandi usando il joistick a mezzo asse
 BRAKE_FULLAXIS = Controllo frenatura per treni con due comandi usando il joistick ad asse completo
 BRAKE_EMERGENCY = Aziona il freno di emergenza per treni con due comandi
