--- a/assets/Languages/ja-JP.cfg
+++ b/assets/Languages/ja-JP.cfg
@@ -602,6 +602,8 @@ POWER_DECREASE = ツーハンドル車マスコン１ノッチ下げ
 POWER_HALFAXIS = ツーハンドル車マスコンにジョイスティック軸半分使用
 POWER_FULLAXIS = ツーハンドル車マスコンにジョイスティック軸全体使用
 BRAKE_DECREASE = ツーハンドル車ブレーキ１ノッチ下げ
+LOCOBRAKE_DECREASE = N/A
+LOCOBRAKE_INCREASE = N/A
 BRAKE_INCREASE = ツーハンドル車ブレーキ１ノッチ上げ
 BRAKE_HALFAXIS = ツーハンドル車ブレーキにジョイスティック軸半分使用
 BRAKE_FULLAXIS = ツーハンドル車ブレーキにジョイスティック軸全体使用
