--- a/assets/Languages/ko-KR.cfg
+++ b/assets/Languages/ko-KR.cfg
@@ -602,6 +602,8 @@ POWER_HALFAXIS = 투 핸들 차량 마스콘에 조이스틱 축 반체 사용
 POWER_FULLAXIS = 투 핸들 차량 마스콘에 조이스틱 축 전체 사용
 BRAKE_DECREASE = 투 핸들 차량 브레이크 1 넛치 인하
 BRAKE_INCREASE = 투 핸들 차량 브레이크 1 넛치 인상
+LOCOBRAKE_DECREASE = N/A
+LOCOBRAKE_INCREASE = N/A
 BRAKE_HALFAXIS = 투 핸들 차량 브레이크에 조이스틱 축 반체 사용
 BRAKE_FULLAXIS = 투 핸들 차량 브레이크에 조이스틱 축 전체 사용
 BRAKE_EMERGENCY = 투 핸들 차량 비상 브레이크
