--- a/assets/Languages/nl-NL.cfg
+++ b/assets/Languages/nl-NL.cfg
@@ -602,6 +602,8 @@ POWER_HALFAXIS = Bedient tractie voor treinen met 2 hendels op een halve joystic
 POWER_FULLAXIS = Bedient tractie voor treinen met 2 hendels op een hele joystickas
 BRAKE_DECREASE = Stelt een lagere remstand in voor treinen met twee hendels
 BRAKE_INCREASE = Stelt een hogere remstand in voor treinen met twee hendels
+LOCOBRAKE_DECREASE = N/A
+LOCOBRAKE_INCREASE = N/A
 BRAKE_HALFAXIS = Bedient de rem voor treinen met twee hendels op een halve joystickas
 BRAKE_FULLAXIS = Bedient de rem voor treinen met twee hendels op een hele joystickas
 BRAKE_EMERGENCY = Bedient de noodrem voor treinen met twee hendels
