--- a/assets/Languages/pl-PL.cfg
+++ b/assets/Languages/pl-PL.cfg
@@ -602,6 +602,8 @@ POWER_HALFAXIS = Kontroluje moc dla pociągów z dwoma wajchami dla pół osiowe
 POWER_FULLAXIS = Kontroluje moc dla pociągów z dwoma wajchami dla kontrolera
 BRAKE_DECREASE = Zmniejsza moc hamowania o jeden poziom dla pociągów z dwoma wajchami
 BRAKE_INCREASE = Powiększa moc hamowania o jeden poziom dla pociągów z dwoma wajchami
+LOCOBRAKE_DECREASE = N/A
+LOCOBRAKE_INCREASE = N/A
 BRAKE_HALFAXIS = Kontroluje moc hamowania dla pociągów z dwoma wajchami dla pół osiowego kontrolera
 BRAKE_FULLAXIS = Kontroluje moc hamowania dla pociągów z dwoma wajchami dla kontrolera
 BRAKE_EMERGENCY = Aktywuje hamulce awaryjne dla pociągów z dwoma wajchami
