--- a/assets/Languages/pt-BR.cfg
+++ b/assets/Languages/pt-BR.cfg
@@ -602,6 +602,8 @@ POWER_HALFAXIS = Controla a força através de metade do eixo do Joystick, em tr
 POWER_FULLAXIS = Controla a força através de todo o eixo do Joystick, em trens com controladores de dois manípulos
 BRAKE_DECREASE = Diminui um ponto à freagem, em trens com controladores de dois manípulos
 BRAKE_INCREASE = Aumenta um ponto à freagem, em trens com controladores de dois manípulos
+LOCOBRAKE_DECREASE = N/A
+LOCOBRAKE_INCREASE = N/A
 BRAKE_HALFAXIS = Controla a freagem através de metade do eixo do Joystick, em trens com controladores de dois manípulos
 BRAKE_FULLAXIS = Controla a freagem através de todo o eixo do Joystick, em trens com controladores de dois manípulos
 BRAKE_EMERGENCY = Aciona os freios de emergência, em trens com controladores de dois manípulos
