--- a/assets/Languages/pt-PT.cfg
+++ b/assets/Languages/pt-PT.cfg
@@ -602,6 +602,8 @@ POWER_HALFAXIS = Controla a força através de metade do eixo do manípulo, em c
 POWER_FULLAXIS = Controla a força através de todo o eixo do manípulo, em comboios com controladores de dois manípulos
 BRAKE_DECREASE = Diminui um ponto à travagem, em comboios com controladores de dois manípulos
 BRAKE_INCREASE = Aumenta um ponto à travagem, em comboios com controladores de dois manípulos
+LOCOBRAKE_DECREASE = N/A
+LOCOBRAKE_INCREASE = N/A
 BRAKE_HALFAXIS = Controla a travagem através de metade do eixo do manípulo, em comboios com controladores de dois manípulos
 BRAKE_FULLAXIS = Controla a travagem através de todo o eixo do manípulo, em comboios com controladores de dois manípulos
 BRAKE_EMERGENCY = Acciona os travões de emergência, em comboios com controladores de dois manípulos
@@ -918,10 +920,14 @@ handle = Manete
 handle_type = Tipo de manete:
 handle_power_notches = Pontos de motor:
 handle_brake_notches = Pontos de travagem:
+handle_driver_power_notches = DriverPowerNotches:
+handle_driver_brake_notches = DriverBrakeNotches:
 handle_power_notch_reduce_steps = Pontos de redução de Potência:
 handle_separated = Separada
 handle_combined = Combinada
 handle_brake_notches_error_message = Pontos de travão devem ser pelo menos 1, se está em Manter travão.
+handle_driver_power_notches_error_message = DriverPowerNotches must be less than or equal to PowerNotches.
+handle_driver_brake_notches_error_message = DriverBrakeNotches must be less than or equal to BrakeNotches.
 
 cab = Cabina
 cab_driver_car = Carruagem-piloto:
