--- a/assets/Languages/ro-RO.cfg
+++ b/assets/Languages/ro-RO.cfg
@@ -602,6 +602,8 @@ POWER_HALFAXIS = Controlează puterea pentru trenuri cu două mânere pe jumatat
 POWER_FULLAXIS = Controlează puterea pentru trenuri cu două mânere pe toata axa unui joystick.
 BRAKE_DECREASE = Scade frâna cu un nivel pentru trenuri cu două mânere.
 BRAKE_INCREASE = Mareste frâna cu un nivel pentru trenuri cu două mânere.
+LOCOBRAKE_DECREASE = N/A
+LOCOBRAKE_INCREASE = N/A
 BRAKE_HALFAXIS = Controlează frâna pentru trenuri cu două mânere pe jumatatea din axa unui joystick.
 BRAKE_FULLAXIS = Controlează frâna pentru trenuri cu două mânere pe toata axa unui joystick.
 BRAKE_EMERGENCY = Activează frâna de urgenţă pentru trenurile cu două mânere.
