--- a/assets/Languages/zh-CN.cfg
+++ b/assets/Languages/zh-CN.cfg
@@ -607,6 +607,8 @@ POWER_HALFAXIS = [分离手柄]  半轴手柄控制牵引
 POWER_FULLAXIS = [分离手柄]  全轴手柄控制牵引
 BRAKE_DECREASE = [分离手柄]  制动增加
 BRAKE_INCREASE = [分离手柄]  制动减少
+LOCOBRAKE_DECREASE = N/A
+LOCOBRAKE_INCREASE = N/A
 BRAKE_HALFAXIS = [分离手柄]  半轴手柄控制制动
 BRAKE_FULLAXIS = [分离手柄]  全轴手柄控制制动
 BRAKE_EMERGENCY = [分离手柄]  紧急制动
