--- a/assets/Languages/zh-HK.cfg
+++ b/assets/Languages/zh-HK.cfg
@@ -602,6 +602,8 @@ POWER_HALFAXIS = 使用半軸操縱桿控制雙桿式列車的動力
 POWER_FULLAXIS = 使用全軸操縱桿控制雙桿式列車的動力
 BRAKE_DECREASE = 在雙桿式列車把列車的制動減少一級
 BRAKE_INCREASE = 在雙桿式列車把列車的制動增加一級
+LOCOBRAKE_DECREASE = N/A
+LOCOBRAKE_INCREASE = N/A
 BRAKE_HALFAXIS = 使用半軸操縱桿控制雙桿式列車的制動
 BRAKE_FULLAXIS = 使用全軸操縱桿控制雙桿式列車的制動
 BRAKE_EMERGENCY = 在雙桿式列車啟動緊急制動
