--- a/assets/Languages/de-DE.cfg
+++ b/assets/Languages/de-DE.cfg
@@ -602,6 +602,8 @@ POWER_HALFAXIS = Kontrolliert die Fahrleistung für Züge mit getrennter Steueru
 POWER_FULLAXIS = Kontrolliert die Fahrleistung für Züge mit getrennter Steuerung auf einer ganzen Joystickachse
 BRAKE_DECREASE = Schaltet für Züge mit getrennter Steuerung eine Bremsstufe runter
 BRAKE_INCREASE = Schaltet für Züge mit getrennter Steuerung eine Bremsstufe hoch
+LOCOBRAKE_DECREASE = N/A
+LOCOBRAKE_INCREASE = N/A
 BRAKE_HALFAXIS = Kontrolliert die Bremse für Züge mit getrennter Steuerung auf einer halben Joystickachse
 BRAKE_FULLAXIS = Kontrolliert die Bremse für Züge mit getrennter Steuerung auf einer ganzen Joystickachse
 BRAKE_EMERGENCY = Aktiviert die Notbremse für Züge mit getrennter Steuerung
