New: Add Obj file parser using Assimp

--- a/source/AssimpObjParser/AssimpObjParser.csproj
+++ b/source/AssimpObjParser/AssimpObjParser.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{572CD7FF-A0C9-4A48-81B7-79B65E37D3C7}</ProjectGuid>
+    <ProjectGuid>{CB10DCBB-F747-425E-BEEF-B01DF20CFDEE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AssimpNET.X</RootNamespace>
-    <AssemblyName>AssimpXParser</AssemblyName>
+    <RootNamespace>AssimpNET.Obj</RootNamespace>
+    <AssemblyName>AssimpObjParser</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,22 +30,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Ionic.Zlib">
-      <HintPath>..\..\dependencies\Ionic.Zlib.dll</HintPath>
-    </Reference>
-    <Reference Include="OpenTK, Version=3.0.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="OpenTK">
       <HintPath>..\..\dependencies\OpenTK.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DeflateCompression.cs" />
+    <Compile Include="Mesh.cs" />
+    <Compile Include="ObjFileData.cs" />
+    <Compile Include="ObjFileMtlImporter.cs" />
+    <Compile Include="ObjFileParser.cs" />
+    <Compile Include="ObjTools.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XFileHelper.cs" />
-    <Compile Include="XFileParser.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
