--- a/source/ObjectViewer/ObjectViewer.csproj
+++ b/source/ObjectViewer/ObjectViewer.csproj
@@ -80,6 +80,7 @@
     <Compile Include="FunctionScripts.cs" />
     <Compile Include="Hosts.cs" />
     <Compile Include="Options.cs" />
+    <Compile Include="Parsers\AssimpObjParser.cs" />
     <Compile Include="Parsers\Generic\AssimpXParser.cs" />
     <Compile Include="Parsers\Ls3DGrpParser.cs" />
     <Compile Include="Parsers\Ls3DObjectParser.cs" />
@@ -121,6 +122,10 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AssimpObjParser\AssimpObjParser.csproj">
+      <Project>{cb10dcbb-f747-425e-beef-b01df20cfdee}</Project>
+      <Name>AssimpObjParser</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AssimpXParser\AssimpXParser.csproj">
       <Project>{572cd7ff-a0c9-4a48-81b7-79b65e37d3c7}</Project>
       <Name>AssimpXParser</Name>
@@ -136,7 +141,7 @@
     </ProjectReference>
     <ProjectReference Include="..\Plugins\Formats.Msts\Formats.Msts.csproj">
       <Project>{E81B7BD8-A326-47D3-B7EE-E9C7D4D119FA}</Project>
-      <Name>OpenBve.Formats.Msts</Name>
+      <Name>Formats.Msts</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
