--- a/source/OpenBVE/OpenBve.csproj
+++ b/source/OpenBVE/OpenBve.csproj
@@ -213,6 +213,7 @@
     <Compile Include="Graphics\Renderer\Structures.cs" />
     <Compile Include="Graphics\Renderer\Objects.cs" />
     <Compile Include="Graphics\Renderer\ViewportModes.cs" />
+    <Compile Include="Parsers\Object\Generic\AssimpObjParser.cs" />
     <Compile Include="Parsers\Object\Generic\AssimpXParser.cs" />
     <Compile Include="Parsers\Object\Generic\NewXParser.cs" />
     <Compile Include="Parsers\Object\Generic\WavefrontObjParser.cs" />
@@ -494,6 +495,10 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AssimpObjParser\AssimpObjParser.csproj">
+      <Project>{cb10dcbb-f747-425e-beef-b01df20cfdee}</Project>
+      <Name>AssimpObjParser</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AssimpXParser\AssimpXParser.csproj">
       <Project>{572cd7ff-a0c9-4a48-81b7-79b65e37d3c7}</Project>
       <Name>AssimpXParser</Name>
@@ -512,7 +517,7 @@
     </ProjectReference>
     <ProjectReference Include="..\Plugins\Formats.Msts\Formats.Msts.csproj">
       <Project>{E81B7BD8-A326-47D3-B7EE-E9C7D4D119FA}</Project>
-      <Name>OpenBve.Formats.Msts</Name>
+      <Name>Formats.Msts</Name>
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
