Move timer to shared library

--- a/source/OpenBveShared/OpenBveShared.csproj
+++ b/source/OpenBveShared/OpenBveShared.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Renderer\Objects.cs" />
+    <Compile Include="System\Functions\Timers.cs" />
     <Compile Include="World\Camera\CameraAlignment.cs" />
     <Compile Include="World\Camera\Camera.cs" />
     <Compile Include="World\Camera\CameraRestrictionMode.cs" />
