--- a/source/OpenBveApi/OpenBveApi.csproj
+++ b/source/OpenBveApi/OpenBveApi.csproj
@@ -79,6 +79,12 @@
     <Compile Include="Interface\Translations\Language.cs" />
     <Compile Include="Math\Matrix4.cs" />
     <Compile Include="Math\Vector4.cs" />
+    <Compile Include="Objects\Glow.cs" />
+    <Compile Include="Objects\Mesh.cs" />
+    <Compile Include="Objects\MeshFace.cs" />
+    <Compile Include="Objects\MeshFaceVertex.cs" />
+    <Compile Include="Objects\MeshMaterial.BlendMode.cs" />
+    <Compile Include="Objects\MeshMaterial.cs" />
     <Compile Include="Objects\UnifiedObject.cs" />
     <Compile Include="System\FileSystem.cs" />
     <Compile Include="Graphics\InterpolationModes.cs" />
